Overfloww padding fixed

--- a/src/components/ColorMenu/styles.scss
+++ b/src/components/ColorMenu/styles.scss
@@ -12,7 +12,11 @@
     animation: appear .5s ease;
 
     max-height: 30vh;
-    overflow: auto;
+    
+
+
+    .lists {
+        overflow: auto;
 
     &::-webkit-scrollbar {
         scrollbar-color: #fefefe;
@@ -33,33 +37,35 @@
         width: .5rem;
      }
 
+
+        ul {
+            list-style: none;
     
-    ul {
-        list-style: none;
-
-
-        li {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            gap: 1rem;
-            /* line-height: 0; */
-            padding: .3rem .5rem;
-            border-radius: .5rem;
-            width: 100%;
-            /* font-size: inherit; */
-            cursor: pointer;
-            transition: background-color .1s ease;
-
-            &:hover {
-                background-color: #2E2E2E;
-
+    
+            li {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 1rem;
+                /* line-height: 0; */
+                padding: .3rem .5rem;
+                border-radius: .5rem;
+                width: 100%;
+                /* font-size: inherit; */
+                cursor: pointer;
+                transition: background-color .1s ease;
+    
+                &:hover {
+                    background-color: #2E2E2E;
+    
+                }
+    
+               
             }
-
-           
+    
         }
-
     }
+    
 }
 
 @keyframes appear {
